fix cutoff input width

--- a/client/admin/search/index/blocks/reindex/reindex.styl
+++ b/client/admin/search/index/blocks/reindex/reindex.styl
@@ -5,3 +5,4 @@
 
 .reindex-cutoff__input
   margin-left .5rem
+  width 5rem !important
